// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostOptions should match snapshot, no option for system message to user who doesn't have the permission to delete 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Connect(SlideUpPanel)
    allowStayMiddle={false}
    initialPosition={250}
    marginFromTop={350}
    onRequestClose={[Function]}
  >
    <PostOption
      icon="edit"
      onPress={[Function]}
      text="Edit"
    />
    <PostOption
      icon="reply"
      onPress={[Function]}
      text="Reply"
    />
    <PostOption
      icon="pin"
      onPress={[Function]}
      text="Pin to Channel"
    />
    <PostOption
      icon="emoji"
      onPress={[Function]}
      text="Add Reaction"
    />
  </Connect(SlideUpPanel)>
</View>
`;

exports[`PostOptions should match snapshot, showing Delete option only for system message to user who has permission to delete 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Connect(SlideUpPanel)
    allowStayMiddle={false}
    initialPosition={300}
    marginFromTop={300}
    onRequestClose={[Function]}
  >
    <PostOption
      icon="edit"
      onPress={[Function]}
      text="Edit"
    />
    <PostOption
      icon="reply"
      onPress={[Function]}
      text="Reply"
    />
    <PostOption
      icon="pin"
      onPress={[Function]}
      text="Pin to Channel"
    />
    <PostOption
      icon="emoji"
      onPress={[Function]}
      text="Add Reaction"
    />
    <PostOption
      destructive={true}
      icon="trash"
      onPress={[Function]}
      text="Delete"
    />
  </Connect(SlideUpPanel)>
</View>
`;

exports[`PostOptions should match snapshot, showing all possible options 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Connect(SlideUpPanel)
    allowStayMiddle={false}
    initialPosition={300}
    marginFromTop={300}
    onRequestClose={[Function]}
  >
    <PostOption
      icon="edit"
      onPress={[Function]}
      text="Edit"
    />
    <PostOption
      icon="reply"
      onPress={[Function]}
      text="Reply"
    />
    <PostOption
      icon="pin"
      onPress={[Function]}
      text="Pin to Channel"
    />
    <PostOption
      icon="emoji"
      onPress={[Function]}
      text="Add Reaction"
    />
    <PostOption
      destructive={true}
      icon="trash"
      onPress={[Function]}
      text="Delete"
    />
  </Connect(SlideUpPanel)>
</View>
`;
